# engrym

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  engrym.toml
assets/: engrym.toml.template
assets/skills/: engrym-bootstrap.md  engrym.md
docs/: data-model.md  design-decisions.md  engrym-overview.md
docs/1/: agent-integration.md  authoring-commands.md  cli-surface.md  embedding-layer.md  frontmatter-schema.md  hybrid-search.md  indexing-pipeline.md  init-and-skill.md  releasing-to-crates-io.md  warm-daemon.md
docs/2/: altitude.md  chunking.md  local-mode.md  sqlite-index.md  topic-taxonomy.md  typed-relations.md  worktree-and-clone-kb-resolution.md
docs/3/: daemon-lifecycle.md  incremental-reembed.md  rrf-fusion.md
examples/kb/: engrym.toml
examples/kb/docs/: auth-architecture.md  oauth-token-refresh.md  token-store.md
spec/: document-schema.md  index-schema.sql
src/: config.rs  daemon.rs  db.rs  embed.rs  main.rs  model.rs  parse.rs  registry.rs  vector.rs
src/commands/: agents.rs  author.rs  browse.rs  deinit.rs  index.rs  init.rs  install.rs  kb.rs  lint.rs  mod.rs  related.rs  reset.rs  search.rs  show.rs  topic.rs  uninstall.rs
tests/: cli.rs
