[package]
name = "engrym"
version = "0.2.0"
edition = "2021"
authors = ["Rares S"]
description = "A fast, AI-first knowledge base layered over Markdown: typed relations, topic hierarchies, and hybrid search."
license = "MIT"
repository = "https://github.com/laleshii/engrym"
readme = "README.md"
keywords = ["knowledge-base", "search", "markdown", "cli", "ai"]
categories = ["command-line-utilities"]

# Keep the published crate lean: docs, examples, and tests aren't needed to
# build or run the binary. The embedded assets (skills, config template,
# `spec/index-schema.sql`) are pulled in via `include_str!`, so they must stay.
exclude = [
    "docs/",
    "examples/",
    "tests/",
    "spec/document-schema.md",
]

[[bin]]
name = "engrym"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
pulldown-cmark = "0.11"
walkdir = "2"
sha2 = "0.10"
anyhow = "1"
regex = "1"
fastembed = "5.17.2"
libc = "0.2.186"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
# Blazing-fast startup + small binary for a CLI.
opt-level = 3
lto = "thin"
strip = true
